update new employee

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -34,7 +34,10 @@
                     <a href="./VacationDays.html"><span class="far fa-calendar-alt"></span><span>Vacation Days</span></a>
                 </li>
                 <li>
-                    <a href="./BenefitsPaid.html"><span class="fas fa-credit-card"></span><span>Benefits Paid</span></a>
+                    <a href="./BenefitsPaid.html"><span class="fab fa-bitcoin"></span><span>Benefits Paid</span></a>
+                </li>
+                <li>
+                    <a href="#"><span class="fas fa-user-plus"></span><span>New Employee</span></a>
                 </li>
                 <li class="menu"><b>NOTIFICATION</b></li>
                 <li>
@@ -49,9 +52,7 @@
                 <li style="border-bottom:.3rem solid black;">
                     <a href="./Birthday.html"><span class="fas fa-birthday-cake"></span><span>Birthday</span></a>
                 </li>
-                <li>
-                    <a href="#"><span class="fab fa-bitcoin"></span><span>Payroll</span></a>
-                </li>
+                
             </ul>
         </div>
     </div>
