add new employee

--- a/BenefitsPaid.html
+++ b/BenefitsPaid.html
@@ -33,7 +33,10 @@
                     <a href="./VacationDays.html"><span class="far fa-calendar-alt"></span><span>Vacation Days</span></a>
                 </li>
                 <li>
-                    <a href="#" class="active2"><span class="fas fa-credit-card"></span><span>Benefits Paid</span></a>
+                    <a href="#" class="active2"><span class="fab fa-bitcoin"></span><span>Benefits Paid</span></a>
+                </li>
+                <li>
+                    <a href="#"><span class="fas fa-user-plus"></span><span>New Employee</span></a>
                 </li>
                 <li class="menu"><b>NOTIFICATION</b></li>
                 <li>
@@ -51,9 +54,9 @@
                 <!-- <li>
                     <a href=""><span class="fas la-user-circle "></span><span>Account</span></a>
                 </li> -->
-                <li>
+                <!-- <li>
                     <a href="#"><span class="fab fa-bitcoin"></span><span>Payroll</span></a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
