--- a/Dashboard.html
+++ b/Dashboard.html
@@ -39,6 +39,7 @@
                 <li>
                     <a href="#"><span class="fas fa-user-plus"></span><span>New Employee</span></a>
                 </li>
+
                 <li class="menu"><b>NOTIFICATION</b></li>
                 <li>
                     <a href="./HiringAnniversary.html"><span class="fas fa-align-left"></span><span>Hiring Anniversary</span></a>
@@ -52,6 +53,9 @@
                 <li style="border-bottom:.3rem solid black;">
                     <a href="./Birthday.html"><span class="fas fa-birthday-cake"></span><span>Birthday</span></a>
                 </li>
+                <!-- <li>
+                    <a href="#"><span class="fab fa-bitcoin"></span><span>Payroll</span></a>
+                </li> -->
                 
             </ul>
         </div>
