edit icon total earning

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -28,7 +28,7 @@
                 </li>
                 <li class="menu"><b>INFORMATION</b></li>
                 <li>
-                    <a href="./TotalEaring.html" ><span class="las la-user"></span><span>Total Earning</span></a>
+                    <a href="./TotalEaring.html" ><span class="fas fa-coins"></span><span>Total Earning</span></a>
                 </li>
                 <li>
                     <a href="./VacationDays.html"><span class="far fa-calendar-alt"></span><span>Vacation Days</span></a>
