--- a/TotalEaring.html
+++ b/TotalEaring.html
@@ -27,7 +27,7 @@
                 </li>
                 <li class="menu"><b>INFORMATION</b></li>
                 <li>
-                    <a href="#" class="active2"><span class="las la-user"></span><span>Total Earning</span></a>
+                    <a href="#" class="active2"><span class="fas fa-coins"></span><span>Total Earning</span></a>
                 </li>
                 <li>
                     <a href="./VacationDays.html"><span class="far fa-calendar-alt"></span><span>Vacation Days</span></a>
