--- a/TotalEaring.html
+++ b/TotalEaring.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="./images/favicon.ico"/>
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/TotalEaring.css">
+    <link rel="stylesheet" href="./css/Table.css">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 </head>
 
@@ -36,7 +36,7 @@
                     <a href="./BenefitsPaid.html"><span class="fab fa-bitcoin"></span><span>Benefits Paid</span></a>
                 </li>
                 <li>
-                    <a href="#"><span class="fas fa-user-plus"></span><span>New Employee</span></a>
+                    <a href="./NewEmployee.html"><span class="fas fa-user-plus"></span><span>New Employee</span></a>
                 </li>
                 <li class="menu"><b>NOTIFICATION</b></li>
                 <li>
