--- a/VacationDays.html
+++ b/VacationDays.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="shortcut icon" href="images/favicon.ico"/>
-    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/VacationDays.css">
+    <link rel="stylesheet" href="./css/Table.css">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 </head>
 
@@ -23,11 +23,11 @@
         <div class="slidebar-menu">
             <ul>
                 <li>
-                    <a href="/Dashboard.html" class="active1"><span class="las la-igloo"></span><span>Dashboard</span></a>
+                    <a href="./Dashboard.html" class="active1"><span class="las la-igloo"></span><span>Dashboard</span></a>
                 </li>
                 <li class="menu"><b>INFORMATION</b></li>
                 <li>
-                    <a href="/TotalEaring.html"><span class="fas fa-coins"></span><span>Total Earning</span></a>
+                    <a href="./TotalEaring.html"><span class="fas fa-coins"></span><span>Total Earning</span></a>
                 </li>
                 <li>
                     <a href="#" class="active2"><span class="far fa-calendar-alt"></span><span>Vacation Days</span></a>
@@ -36,20 +36,20 @@
                     <a href="./BenefitsPaid.html"><span class="fab fa-bitcoin"></span><span>Benefits Paid</span></a>
                 </li>
                 <li>
-                    <a href="#"><span class="fas fa-user-plus"></span><span>New Employee</span></a>
+                    <a href="./NewEmployee.html"><span class="fas fa-user-plus"></span><span>New Employee</span></a>
                 </li>
                 <li class="menu"><b>NOTIFICATION</b></li>
                 <li>
-                    <a href="/HiringAnniversary.html"><span class="fas fa-align-left"></span><span>Hiring Anniversary</span></a>
+                    <a href="./HiringAnniversary.html"><span class="fas fa-align-left"></span><span>Hiring Anniversary</span></a>
                 </li>
                 <li>
-                    <a href="/AccumulatedVacation.html"><span class="fas fa-route"></span><span>Accumulated Vacation</span></a>
+                    <a href="./AccumulatedVacation.html"><span class="fas fa-route"></span><span>Accumulated Vacation</span></a>
                 </li>
                 <li>
-                    <a href="/ChangeBenefitsPlan.html"><span class="fas fa-trophy"></span><span>Change Benefits Plan</span></a>
+                    <a href="./ChangeBenefitsPlan.html"><span class="fas fa-trophy"></span><span>Change Benefits Plan</span></a>
                 </li>
                 <li style="border-bottom:.3rem solid black;">
-                    <a href="/Birthday.html"><span class="fas fa-birthday-cake"></span><span>Birthday</span></a>
+                    <a href="./Birthday.html"><span class="fas fa-birthday-cake"></span><span>Birthday</span></a>
                 </li>
                 <!-- <li>
                     <a href=""><span class="fas la-user-circle "></span><span>Account</span></a>
@@ -75,7 +75,7 @@
                         <ul class="subnav">
                             <li><a href="#"><i class="fas fa-user-circle  m-r-10" ></i>Account</a></li>
                             <li><a href="#"><i class="fas fa-cogs m-r-10"></i>Setting</a></li>
-                            <li><a href="index.html"><i class="fas fa-sign-out-alt m-r-10"></i>Log Out</a></li>
+                            <li><a href="./index.html"><i class="fas fa-sign-out-alt m-r-10"></i>Log Out</a></li>
                         </ul>
                     </li>
                 </div>
