--- a/Dashboard.html
+++ b/Dashboard.html
@@ -37,7 +37,7 @@
                     <a href="./BenefitsPaid.html"><span class="fab fa-bitcoin"></span><span>Benefits Paid</span></a>
                 </li>
                 <li>
-                    <a href="#"><span class="fas fa-user-plus"></span><span>New Employee</span></a>
+                    <a href="./NewEmployee.html"><span class="fas fa-user-plus"></span><span>New Employee</span></a>
                 </li>
 
                 <li class="menu"><b>NOTIFICATION</b></li>
