--- a/VacationDays.html
+++ b/VacationDays.html
@@ -65,7 +65,7 @@
             <h2>
                 <label for="nav-toggle">
                         <span class="las la-bars"></span>
-                    </label> Vacation Days
+                    </label> Total Vacation Days
             </h2>
 
             <div class="user-wrapper">
