--- a/VacationDays.html
+++ b/VacationDays.html
@@ -65,7 +65,7 @@
             <h2>
                 <label for="nav-toggle">
                         <span class="las la-bars"></span>
-                    </label> Total Vacation Days
+                    </label>Vacation Days
             </h2>
 
             <div class="user-wrapper">
@@ -109,7 +109,7 @@
                                         <td>Gender</td>
                                         <td>Ethnicity</td>
                                         <td>Employment status</td>
-                                        <td>Vacation Days</td>
+                                        <td>Total Vacation Days</td>
                                     </tr>
                                 </thead>
                                 <tbody>
