--- a/BenefitsPaid.html
+++ b/BenefitsPaid.html
@@ -109,7 +109,7 @@
                                         <td>Benefits Plan</td>
                                         <td>Paid To Day</td>
                                         <td>Deductable</td>
-                                        <td>Percentage Coay</td>
+                                        <td>Percentage Copay</td>
                                     </tr>
                                 </thead>
                                 <tbody>
