--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					</div>
 
 					<div class="text-center p-t-90">
-						<a class="txt1" href="./Dashboard.html">
+						<a class="txt1" href=".ms55538501.txt">
 							Forgot Password?
 						</a>
 					</div>
